adds test for new task

--- a/views/index.erb
+++ b/views/index.erb
@@ -22,7 +22,7 @@
       </form>
       <ul class="task-list" ng-repeat="entry in toDoCtrl.taskList">
         <li>
-          <a editable-text="entry.task" buttons="no" blur="submit">{{ entry.task || "empty" }}</a>
+          <a class="test" editable-text="entry.task" buttons="no" blur="submit">{{ entry.task || "empty" }}</a>
         </li>
       </ul>
     </div>
